qisun-poc/ResourceManager/AzureRM.KeyVault/v0.9.8/Set-AzureKeyVaultSecretAttribute.md
---
external help file: Microsoft.Azure.Commands.KeyVault.dll-Help.xml
online version: http://go.microsoft.com/fwlink/?LinkId=534612
schema: 2.0.0
ms.assetid: 5DC46684-441C-408C-AB8D-8F6FD1CDE98C
updated_at: 10/19/2016 3:33 AM
ms.date: 10/19/2016
content_git_url: https://github.com/SummerSun/azure-docs-powershell-int/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.KeyVault/v0.9.8/Set-AzureKeyVaultSecretAttribute.md
gitcommit: https://github.com/SummerSun/azure-docs-powershell-int/blob/c0d1e448da01261236e9ece01ca5c2a98effbf31/azureps-cmdlets-docs/ResourceManager/AzureRM.KeyVault/v0.9.8/Set-AzureKeyVaultSecretAttribute.md
ms.topic: reference
ms.prod: powershell
ms.service: Azure PowerShell
ms.technology: Azure PowerShell
author: visual-studio-china
keywords: powershell, cmdlet
manager: visual-studio-china
---

# Set-AzureKeyVaultSecretAttribute

## SYNOPSIS
Updates attributes of a secret in a vault.

## SYNTAX

```
Set-AzureKeyVaultSecretAttribute [-VaultName] <String> [-Name] <String> [[-Version] <String>]
 [-Enable <Boolean>] [-Expires <DateTime>] [-NotBefore <DateTime>] [-ContentType <String>] [-Tags <Hashtable>]
 [-PassThru] [-Profile <AzureProfile>] [<CommonParameters>]
```

## DESCRIPTION
The **Set-AzureKeyVaultSecretAttribute** cmdlet updates editable attributes of a secret in an Azure Key Vault.

## EXAMPLES

### Example 1: Modify the attributes of a secret
```
PS C:\>$Expires = (Get-Date).AddYears(2).ToUniversalTime()
PS C:\> $Nbf = (Get-Date).ToUniversalTime()
PS C:\> $Tags = @{ "Severity" = "medium"; "HR" = null}
PS C:\> $ContentType= "xml"  
PS C:\> Set-AzureKeyVaultSecretAttribute -VaultName "ContosoVault" -Name "HR" -Expires $Expires -NotBefore $Nbf -ContentType $ContentType -Enable $True -Tags $Tags -PassThru
```

The first four commands define attributes for the expiry date, the NotBefore date, tags, and context type, and store the attributes in variables.

The final command modifies the attributes for the secret named HR in the vault named ContosoVault, using the stored variables.

### Example 2: Delete the tags and content type for a secret
```
PS C:\>Set-AzureKeyVaultSecretAttribute -VaultName "ContosoVault" -Name "HR" -Version "9EEA45C6EE50490B9C3176A80AC1A0DF" -ContentType "" -Tags -@{}
```

This command deletes the tags and the content type for the specified version of the secret named HR in the vault named Contoso.

### Example 3: Disable the current version of secrets whose name begins with IT
```
PS C:\>$Vault = "ContosoVault"
PS C:\> $Prefix = "IT"
PS C:\> Get-AzureKeyVaultSecret $Vault | Where-Object {$_.Name -like $Prefix + '*'} | Set-AzureKeyVaultSecretAttribute -Enable $False
```

The first command stores the string value Contoso in the $Vault variable.

The second command stores the string value IT in the $Prefix variable.

The third command uses the Get-AzureKeyVaultSecret cmdlet to get the secrets in the specified vault, and then passes those secrets to the **Where-Object** cmdlet.
The **Where-Object** cmdlet filters the secrets for names that begin with the characters IT.
The command pipes the secrets that match the filter to the Set-AzureKeyVaultSecretAttribute cmdlet, which disables them.

### Example 4: Set the ContentType for all versions of a secret
```
PS C:\>$VaultName = "ContosoVault"
PS C:\> $Name = "HR"
PS C:\> $ContentType = "xml"
PS C:\> Get-AzureKeyVaultKey -VaultName $VaultName -Name $Name -IncludeVersions | Set-AzureKeyVaultSecretAttribute -ContentType $ContentType
```

The first three commands define string variables to use for the *VaultName*, *Name*, and *ContentType* parameters.
The fourth command uses the Get-AzureKeyVaultKey cmdlet to get the specified keys, and pipes the keys to the Set-AzureKeyVaultSecretAttribute cmdlet to set their content type to XML.

## PARAMETERS

### -ContentType
Specifies the content type of a secret.
If you do not specify this parameter, there is no change to the current secret's content type.
To remove the existing content type, specify an empty string.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Enable
Indicates whether to enable a secret.
Specify $False to disable a secret, or $True to enable a secret.
If you do not specify this parameter, there is no change to the current secret's enabled or disabled state.

```yaml
Type: Boolean
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Expires
Specifies the date and time that a secret expires.

```yaml
Type: DateTime
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Name
Specifies the name of a secret.
This cmdlet constructs the fully qualified domain name (FQDN) of a secret based on the name that this parameter specifies, the name of the vault, and your current environment.

```yaml
Type: String
Parameter Sets: (All)
Aliases: SecretName

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -NotBefore
Specifies the Coordinated Universal Time (UTC) before which the secret can't be used.
If you do not specify this parameter, there is no change to the current secret's NotBefore attribute.

```yaml
Type: DateTime
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -PassThru
Returns an object representing the item with which you are working.
By default, this cmdlet does not generate any output.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Profile
Specifies the Azure profile from which this cmdlet reads.
If you do not specify a profile, this cmdlet reads from the local default profile.

```yaml
Type: AzureProfile
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Tags
Specifies a hash table that represents tags for a secret.
If you do not specify this parameter, there is no change to the current secret's tags.
To remove a tag, specify an empty hash table.
For more information about resource tags, see Using tags to organize your Azure resourceshttp://go.microsoft.com/fwlink/?LinkId=613624 (http://go.microsoft.com/fwlink/?LinkId=613624).

```yaml
Type: Hashtable
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -VaultName
Specifies the name of the vault to modify.
This cmdlet constructs the FQDN of a vault based on the name that this parameter specifies, and your currently selected environment.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Version
Specifies the version of a secret.
This cmdlet constructs the FQDN of a secret based on the vault name, your currently selected environment, the secret name, and the secret version.

```yaml
Type: String
Parameter Sets: (All)
Aliases: SecretVersion

Required: False
Position: 3
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### string, bool?, DateTime?, string[], Hashtable, SwitchParameter

## OUTPUTS

### Return Microsoft.Azure.Commands.KeyVault.Models.Secret object if PassThru is specified. Otherwise, return nothing.

## NOTES

## RELATED LINKS

[Get-AzureKeyVaultKey](.\Get-AzureKeyVaultKey.md)

[Get-AzureKeyVaultSecret](.\Get-AzureKeyVaultSecret.md)

[Remove-AzureKeyVaultSecret](.\Remove-AzureKeyVaultSecret.md)


